--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "vercel": "^34.1.7"
   }
 }
